--- a/admin.html
+++ b/admin.html
@@ -7,13 +7,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="shortcut icon" href="./image/眠眠.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style/admin.css">
-    <title>Document</title>
+    <title>後台管理</title>
 </head>
     <body>
-        <nav class="topBar">
+        <nav class="topBar sticky-top">
             <div class="wrap">
-                <h1><a href="#" class="logo">WOWOROOM</a></h1>
+                <h1><a href="#" class="logo">眠眠傢俱</a></h1>
                 <span class="material-icons menuToggle">
                     menu
                 </span>
